# cpp_labs

./: .gitignore  CMakeLists.txt  main.cpp
.github/: build.yml
.github/workflows/: build.yml
lab_1/: CMakeLists.txt  README.md
lab_1/include/: my_string.h  program.h  utils.h
lab_1/src/: main.cpp  my_string.cpp  program.cpp  utils.cpp
lab_2/: CMakeLists.txt  README.md  main.cpp
lab_2/include/: program.h  string.h
lab_2/src/: main.cpp  menus.cpp  program.cpp  string.cpp  utils.cpp
lab_3/: CMakeLists.txt  README.md  main.cpp
lab_3/include/: program.h  school_student.h  student.h  university_student.h  utils.h
lab_3/src/: main.cpp  menus.cpp  program.cpp  school_student.cpp  student.cpp  university_student.cpp
lab_4/: CMakeLists.txt  README.md
lab_4/include/: menus.h  program.h  school_student.h  student.h  university_student.h
lab_4/src/: program.cpp  school_student.cpp  student.cpp  university_student.cpp
lab_5/: CMakeLists.txt  README.md  main.cpp
lab_5/include/: myarray.h  program.h  utils.h
lab_5/src/: main.cpp  utils.cpp
lab_6/: CMakeLists.txt  README.md
lab_6/include/: date.h  date_digit_exception.h  date_format_exception.h  date_range_exception.h  menu.h  myexception.h  program.h  utils.h
lab_6/src/: date.cpp  main.cpp  menu.cpp  myexception.cpp  program.cpp  utils.cpp
lab_7/: CMakeLists.txt  main.cpp
lab_7/include/: employee.h  employeefinder.h  menu.h  program.h
lab_7/src/: employee.cpp  employeefinder.cpp  main.cpp  menu.cpp  program.cpp
lab_8/: CMakeLists.txt
lab_8/include/: menu.h  myalgorithm.h  mycontainer.h  myexception.h  myiterator.h
lab_8/src/: main.cpp  menu.cpp  myexception.cpp
src/: CMakeLists.txt  main.cpp
